Commit before rename repo.

--- a/notebooks/compare_lms.ipynb
+++ b/notebooks/compare_lms.ipynb
@@ -2,6 +2,71 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import combinations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_list = [\"julia\", \"best\", \"tseb\", \"for\", \"ailuj\"]\n",
+    "sum(a == b[::-1] for a, b in combinations(test_list, 2))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "str1 = \"data\"\n",
+    "d = defaultdict(int)\n",
+    "for c in str1:\n",
+    "    d[c] += 1\n",
+    "max(d.items(), key=lambda x: x[1])[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(d.items(), key=lambda x: x[1])[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -271,23 +336,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1066,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Ċ', '8', 'Ġ50', 'Ġ4', 'Ġ->', 'Ġ50', 'Ċ', '10', 'Ġ5', 'Ġ8', 'Ġ->', 'Ġ10', 'Ċ', '1', 'Ġ2', 'Ġ70', 'Ġ->', 'Ġ70', 'Ċ', '60', 'Ġ9', 'Ġ5', 'Ġ->', 'Ġ60', 'Ċ', '7', 'Ġ10', 'Ġ4', 'Ġ->', 'Ġ10', 'Ċ', '4', 'Ġ3', 'Ġ10', 'Ġ->', 'Ġ10', 'Ċ', '2', 'Ġ1', 'Ġ40', 'Ġ->', 'Ġ40', 'Ċ', '10', 'Ġ2', 'Ġ7', 'Ġ->']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(tokenizer.tokenize(_text))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {
     "collapsed": true
@@ -430,6 +478,7 @@
     }
    ],
    "source": [
+    "# for Shawn Guo\n",
     "model_name = \"EleutherAI/gpt-neo-2.7B\"\n",
     "model = GPTNeoForCausalLM.from_pretrained(model_name, proxies=proxies, cache_dir=cache_dir)\n",
     "tokenizer = GPT2Tokenizer.from_pretrained(model_name, cache_dir=cache_dir)\n",
@@ -442,15 +491,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# for Shawn Guo\n",
     "for path in ['/nas/qsj/code/transformer-xl/pytorch/utils', '/nas/qsj/code/transformer-xl/pytorch']:\n",
     "    if path not in sys.path:\n",
     "        sys.path.insert(0, path)\n",
-    "model_path = '/home/kf/projects/transformer-xl/checkpoints/torch/novelGpt2-ao3-100G-TPU512-mem384-dim1600-32layers-preLnorm/model.ckpt-700000*.bin'\n",
+    "# model_path = '/home/kf/projects/transformer-xl/checkpoints/torch/novelGpt2-ao3-100G-TPU512-mem384-dim1600-32layers-preLnorm/model.ckpt-700000*.bin'\n",
+    "model_path = '/nas2/xiaomeng/models/TPU512-mem384-dim1600-32layers-preLnorm/model.ckpt-850000.bin'\n",
     "model = torch.load(open(model_path, 'rb'))\n",
     "model.backward_compatible()\n",
     "model = model.to(device)\n",
     "_ = model.eval()\n",
-    "model.reset_length(384, 0, 1280)\n",
+    "# model.reset_length(384, 0, 1280)\n",
+    "model.reset_length(2048, 0, 2048)\n",
     "\n",
     "model_name = 'tr-xl-1.1B'\n",
     "model.device = torch.device('cpu')\n",
@@ -1113,6 +1165,7 @@
     }
    ],
    "source": [
+    "# for Shawn Guo\n",
     "for _input_len in [768, ]:\n",
     "    results = defaultdict(dict)\n",
     "    for model_name, (model, tokenizer) in models.items():\n",
@@ -2651,7 +2704,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
